UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Achievement_Summary_Table__c.object
<CustomObject>
    <fields>
        <fullName>Achieved__c</fullName>
        <formula>Direct_Sales__c +  Indirect_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Achieved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateToConsider__c</fullName>
        <label>DateToConsider</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Sales_Billing_Date__c</fullName>
        <label>Direct Sales Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Sales__c</fullName>
        <label>Direct Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Units__c</fullName>
        <label>Direct Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct__c</fullName>
        <label>Direct</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <label>Employee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Sales_Date__c</fullName>
        <label>Indirect Sales Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Indirect_Sales__c</fullName>
        <label>Indirect Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indirect__c</fullName>
        <label>Indirect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Year__c</fullName>
        <formula>CASE(MONTH( DateToConsider__c ),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot; &quot;)+&quot;-&quot; +RIGHT(TEXT(YEAR(  DateToConsider__c )) , LEN(TEXT(YEAR(  DateToConsider__c ))) - 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email_Id__c</fullName>
        <label>Sales Rep Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <label>Sales Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soldToRebatePercent__c</fullName>
        <label>soldToRebatePercent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Achievement Summary Table</label>
    <nameField>
        <label>Achievement Sa Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Achievement Summary Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>